--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Projects Example</title>
+    <title>Building Blocks Register</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Oswald|Source+Code+Pro:700" rel="stylesheet">
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Bootstrap Project List Example</a>
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Building Blocks</a>
         <a class="navbar-brand" target="_blank" href="https://github.com/James231/Bootstrap-Project-Filters" style="float: right;">GitHub</a>
     </nav>
     <div class="main-container col-12 col-lg-10">
-        <h1>Projects List:</h1>
+        <h1>Building Blocks:</h1>
 
         <div class="filter-text">
             <div id="label-container" class="label-container" style="display: flex; flex-wrap: wrap;">
-                <p style="margin: 2px 10px 0px 0;">Filter projects by label:</p>
+                <p style="margin: 2px 10px 0px 0;">Filter blocks by label:</p>
                 <a id="project-label-all" class="project-label-alt proj-label-black">All</a>
                 <a id="project-label-none" class="project-label-alt proj-label-black">None</a>
             </div>
