--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <title>Building Blocks Register</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/x-icon" href="3d_emblem_lockup.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Oswald|Source+Code+Pro:700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Building Blocks</a>
-        <a class="navbar-brand" target="_blank" href="https://github.com/James231/Bootstrap-Project-Filters" style="float: right;">GitHub</a>
+    <nav class="navbar navbar-default">
+        <a class="navbar-brand" href="#"><img src="ogc-logo-white.svg"  width="5%"></a>
+        <!-- <a class="navbar-brand" target="_blank" href="https://github.com/James231/Bootstrap-Project-Filters" style="float: right;">GitHub</a> -->
     </nav>
     <div class="main-container col-12 col-lg-10">
         <h1>Building Blocks:</h1>
@@ -28,6 +29,7 @@
         <div id="projects-parent" style="display: flex; flex-wrap: wrap;">
         </div>
     </div>
+
 
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
